found how to send image in the mail + how to include css

--- a/emails/event/html.pug
+++ b/emails/event/html.pug
@@ -1,1 +1,11 @@
-p Wesh alors #{name}
+html
+  head
+    style
+      include style.css
+  body
+    p.header
+      h1 Club bières
+    p.body
+      div Wesh alors 
+      img(src="cid:logo")
+      
