link to register/unregister to maillist added in mail template

--- a/emails/event/html.pug
+++ b/emails/event/html.pug
@@ -16,5 +16,11 @@ html
         .bold Inscris-toi dès maintenant
         .text et consulte la liste des bières qu'il y aura à déguster !
       </p>
-      a(class='button' href=clientURI) JE M'INSCRIS
+      <p>
+        a(class='button' href=clientURI) JE M'INSCRIS
+      </p>
+      .separator
+      <p class="maillist">
+        .text Si tu ne souhaites plus être notifié par mail, <a href=#{mailListUri}>clique ici</a>
+      </p>
     </div>
